Point working dir to /tmp by default

--- a/example.cfg
+++ b/example.cfg
@@ -11,7 +11,7 @@ METASCHEDULER_URL = "http://metascheduler"
 
 WORK_QUEUE = "docker_queue"
 
-WORK_DIR = "/var/cache/skygrid-docker-worker"
+WORK_DIR = "/tmp"
 
 THREADS_NUM = (numCPUs() - 1) or 1
 
