Changes for pydisneyland and python3 compatibility

--- a/example.cfg
+++ b/example.cfg
@@ -17,8 +17,8 @@ THREADS_NUM = (numCPUs() - 1) or 1
 
 DEBUG = True
 
-SLEEP_TIME = 60 * 2 # seconds
-CONTAINER_CHECK_INTERVAL = 60 # seconds
+SLEEP_TIME = 2 # seconds
+CONTAINER_CHECK_INTERVAL = 2 # seconds
 
 ONLY_LOCAL_IMAGES = False
 
