--- a/example.cfg
+++ b/example.cfg
@@ -35,7 +35,7 @@ DOCKER_START_ATTEMPTS = 10 # see https://github.com/docker/docker/issues/4036
 
 # Set up beckends
 from hepbackends import MultiBackend, LocalBackend, LocalHostBackend, GitBackend, NoneBackend
-from hepbackends.webdav import WebDAVBackend
+#from hepbackends.webdav import WebDAVBackend
 
 BACKEND_MAP = {
     "local" : LocalBackend(),
