--- a/example.cfg
+++ b/example.cfg
@@ -13,7 +13,8 @@ WORK_QUEUE = "docker_queue"
 
 WORK_DIR = "/tmp"
 
-THREADS_NUM = (numCPUs() - 1) or 1
+THREADS_NUM = 1
+CPU_NUM = 1
 
 DEBUG = True
 
