--- a/example.cfg
+++ b/example.cfg
@@ -35,14 +35,15 @@ DOCKER_START_ATTEMPTS = 10 # see https://github.com/docker/docker/issues/4036
 
 
 # Set up beckends
-from hepbackends import MultiBackend, LocalBackend, LocalHostBackend, GitBackend, NoneBackend
-#from hepbackends.webdav import WebDAVBackend
+from hepbackends import MultiBackend, LocalBackend, LocalHostBackend, GitBackend, NoneBackend, AWSBackend
 
 BACKEND_MAP = {
     "local" : LocalBackend(),
     "host": LocalHostBackend(),
     "git": GitBackend(),
     "none": NoneBackend(),
+    "aws": AWSBackend(endpoint_url='https://storage.yandexcloud.net',
+    bucket='cern-net'),
 }
 
 backend = MultiBackend(BACKEND_MAP)
